--- a/css/style.css
+++ b/css/style.css
@@ -4,8 +4,17 @@
     margin: 0;
 }
 
+body {
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    min-height: 100vh;
+     width: 100vw;
+    display: flex;
+    flex-direction: column
+}
+
 .section1 {
     background-color: #1f2937;
+    padding-bottom: 100px;
 }
 
 h1 {
@@ -16,12 +25,13 @@ h1 {
 .logo {
     font-size: 24px;
     color: #f9faf8;
-    padding-left: 150px;
+    padding-left: 300px;
 }
 
 .links {
-    padding-right: 150px;
-    padding-top: 5px;
+    display: flex;
+    margin-right: 365px;
+    padding-top: 0;
 }
 
 a {
@@ -33,30 +43,82 @@ a {
 }
 
 .content {
-    display: flex;
     font-size: 18px;
     color: #e5e7eb;
-    padding-left: 150px;
-    flex-direction: column;
+    margin-left: 300px;
+    width: 450px;
 }
 
 .header {
     display: flex;
     justify-content: space-between;
     margin-bottom: 50px;
+    padding-top: 10px;
 }
 
-.button1 {
+#button1 {
     background-color: #3882f6;
     color: white;
-    padding: 5px 20px;
+    padding: 8px 30px;
     border-radius: 12px;
     border: 0;
+    margin-top: 8px;
 }
 
 .img-container {
     display: flex;
     font-size: 18px;
     color: #e5e7eb; 
-    flex-direction: column;  
+    margin-left: 400px;
+    align-items: center;
+    justify-content: center;
+    width: 400px;
+    height: 200px;
+    background-color: darkgray;
+}
+
+.testing {
+    display: flex;
+
+}
+
+.section2 {
+    margin-bottom: 150px;
+
+}
+
+h2 {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 36px;
+    padding: 18px 0;
+}
+
+.boxes {
+    display: flex;
+    justify-content: center;
+}
+
+.box1, .box2, .box3, .box4 {
+    width: 150px;
+    height: 150px;
+    margin-right: 30px;
+    border:3px solid #3882f6;
+    border-radius: 25px;
+}
+
+.boxinfo {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding-top: 10px;
+
+}
+
+.boxinfo p {
+    width: 150px;
+    height: 150px;
+    margin-right: 25px;
+
 }
