--- a/css/style.css
+++ b/css/style.css
@@ -6,8 +6,6 @@
 
 body {
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    min-height: 100vh;
-     width: 100vw;
     display: flex;
     flex-direction: column
 }
@@ -49,7 +47,7 @@ a {
     width: 450px;
 }
 
-.header {
+.header{
     display: flex;
     justify-content: space-between;
     margin-bottom: 50px;
@@ -82,9 +80,7 @@ a {
 
 }
 
-.section2 {
 
-}
 
 h2 {
     display: flex;
@@ -124,9 +120,11 @@ h2 {
 
 .section3 {
     display: flex;
-    align-items: flex-end;
+    align-items: center;
     justify-content: center;
     background-color: #e5e7e5;
+    margin-bottom: 50px;
+    flex-direction: column;
 }
 
 .quote {
@@ -147,4 +145,57 @@ h2 {
     font-weight: bold;
     justify-content: center;
     padding-bottom: 10px;
+    margin-left: 400px;
+    padding-bottom: 50px;
 }
+
+.container {
+    display: flex;
+    flex-direction: column;
+    background-color: #3882f6;
+    padding: 45px 0;
+    margin-left: 300px;
+    margin-right: 400px;
+    border-radius: 12px;
+    align-items: center;
+    justify-content: space-around;
+    color: #f9faf8;
+    margin-bottom: 80px;
+
+
+} 
+
+
+.info {
+    display: flex;
+}
+
+
+.signup {
+    margin-left: 80px;
+    margin-bottom: 5px;
+    background-color: #3882f6;
+    color: #f9faf8;
+    padding: 5px 15px;
+    border:2px solid #f9faf8;
+    border-radius: 6px;
+
+}
+
+.sec4heading {
+    margin-right: 440px;
+    font-weight: bold;
+ 
+}
+
+.footer {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 25px;
+    font-size: 18px;
+    color: #e5e7eb;
+    background-color: #1f2937;
+
+}
+
